[root layer scrolls] Make VisualViewport size RLS-aware

This patch makes VisualViewport.{width, height} work with
root layer scrolling (RLS) where the layout viewport
scrollable area should be used to access the visible
content rect. This patch fixes the main frame size in
VisualViewport's VisibleWidthCSSPx and VisibleHeightCSSPx,
and non-main-frame sizes in LocalDOMWindow::GetViewportSize.

With this patch, 11 more tests pass with RLS.

Bug: 774711
Change-Id: Idc2357fe12767bda6b3e0d94006141bf265203fd