third_party/WebKit/Source/core/frame/LocalDOMWindow.cpp
@@ -983,7 +983,9 @@ FloatSize LocalDOMWindow::GetViewportSize(
   return GetFrame()->IsMainFrame() &&
                  !page->GetSettings().GetInertVisualViewport()
              ? FloatSize(page->GetVisualViewport().VisibleRect().Size())
-             : FloatSize(view->VisibleContentRect(scrollbar_inclusion).Size());
+             : FloatSize(view->LayoutViewportScrollableArea()
+                             ->VisibleContentRect(scrollbar_inclusion)
+                             .Size());
 }
 
 int LocalDOMWindow::innerHeight() const {
