third_party/WebKit/Source/core/frame/VisualViewport.cpp
@@ -238,8 +238,9 @@ double VisualViewport::VisibleWidthCSSPx() const {
 
   float zoom = MainFrame()->PageZoomFactor();
   float width_css_px = AdjustScrollForAbsoluteZoom(VisibleSize().Width(), zoom);
+  auto* scrollable_area = MainFrame()->View()->LayoutViewportScrollableArea();
   float scrollbar_thickness_css_px =
-      MainFrame()->View()->VerticalScrollbarWidth() / (zoom * scale_);
+      scrollable_area->VerticalScrollbarWidth() / (zoom * scale_);
   return width_css_px - scrollbar_thickness_css_px;
 }
 
@@ -250,8 +251,9 @@ double VisualViewport::VisibleHeightCSSPx() const {
   float zoom = MainFrame()->PageZoomFactor();
   float height_css_px =
       AdjustScrollForAbsoluteZoom(VisibleSize().Height(), zoom);
+  auto* scrollable_area = MainFrame()->View()->LayoutViewportScrollableArea();
   float scrollbar_thickness_css_px =
-      MainFrame()->View()->HorizontalScrollbarHeight() / (zoom * scale_);
+      scrollable_area->HorizontalScrollbarHeight() / (zoom * scale_);
   return height_css_px - scrollbar_thickness_css_px;
 }
 
