third_party/WebKit/Source/core/frame/VisualViewport.h
@@ -226,11 +226,9 @@ class CORE_EXPORT VisualViewport final
   // Visual Viewport API implementation.
   double OffsetLeft() const;
   double OffsetTop() const;
-  double Width() const;
-  double Height() const;
   double ScaleForVisualViewport() const;
 
-  // Used to calculate Width and Height above but do not update layout.
+  // Used to calculate Width and Height but do not update layout.
   double VisibleWidthCSSPx() const;
   double VisibleHeightCSSPx() const;
 
